syntax = "proto3";

package user;

service UserService {
  rpc CreateUserProfile(CreateUserProfileRequest) returns (UserProfileResponse);
  rpc GetUser(UserId) returns (UserProfileResponse);
  // rpc GetUserTrips(GetUserTripsRequest) returns (TripsListResponse);
}

message CreateUserProfileRequest {
  string user_id=1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  double balance = 5;
}

message UserId {
  string id = 1;
}

message UserProfileResponse {
  string user_id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  double balance = 5;
}

